@@ -16,16 +16,15 @@ public class CustomerMapper {
     private final ModelMapper modelMapper;
 
     public Customer mapToCustomer(CustomerDto customerDto){
-        Customer customer = modelMapper.map(customerDto, Customer.class);
-        return customer;
+        return modelMapper.map(customerDto, Customer.class);
+
     }
     public CustomerDto mapToCustomerDto(Customer customer){
-        CustomerDto map = modelMapper.map(customer, CustomerDto.class);
-        return map;
+        return modelMapper.map(customer, CustomerDto.class);
     }
     public List<CustomerDto> mapToCustomerDtoList(final List<Customer> customers){
         return customers.stream()
                 .map(this::mapToCustomerDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
